# waystream

./: Cargo.toml  Containerfile-build  README.md
.github/workflows/: cargo-build-release.yml  container-extract-artifact.yml  container-image.yml  release.yml
contrib/PKGBUILD/git/: PKGBUILD
libwayshot/src/: convert.rs  lib.rs
waystream/: Cargo.toml
waystream/src/: clap.rs  waystream.rs
